css/style2.css
html, body {
    color: #25253A;
    font-family: "Freight Sans Pro";
    height: 100%;
    width: 100%;
    overflow: hidden;
    background-color: black;
}

.carousel-caption {
    color: #25253A;
    text-shadow: none;
    right: 20%;
    left: 20%;
    padding-bottom: 35px;
    text-transform: uppercase;
    font-weight: 700;
    font-size: 16px;
}

.carousel-control {
    text-shadow: none;
}

.carousel-indicators {
  direction: rtl;
  padding-right: 0;
  margin-bottom: 0;
  z-index: 9999;
  bottom: 0;
  transition: bottom 0.3s;
}

.carousel-indicators.inactive {
  bottom: -30px;
}

.carousel-arrows .left {
  transition: left 0.3s;
}

.carousel-arrows .right {
  transition: right 0.3s;
}

.carousel-arrows.inactive .left {
  left: -90px;
}

.carousel-arrows.inactive .right {
  right: -90px;
}

.carousel-indicators li {
    /*width: 19px;*/
    height: 32px;
    border-radius: 0;
    border: 0;
    margin: 0;
    background-size: contain;
    background-color: transparent;
}

.carousel-indicators li.active {
  /*width: 19px;*/
  height: 32px;
  background-color: transparent;
}

.carousel-indicators li[data-slide-to='0'] {
  width: 19px;
  background-image: url("../pngs/nav/01_empty.png");
}

.carousel-indicators li[data-slide-to='0'].active {
  background-image: url("../pngs/nav/01_full.png");
}

.carousel-indicators li[data-slide-to='1'] {
  width: 15.5px;
  background-image: url("../pngs/nav/02_empty.png");
}

.carousel-indicators li[data-slide-to='1'].active {
  background-image: url("../pngs/nav/02_full.png");
}

.carousel-indicators li[data-slide-to='2'] {
  width: 15.5px;
  background-image: url("../pngs/nav/03_empty.png");
}

.carousel-indicators li[data-slide-to='2'].active {
  background-image: url("../pngs/nav/03_full.png");
}

.carousel-indicators li[data-slide-to='3'] {
  width: 16px;
  background-image: url("../pngs/nav/04_empty.png");
}

.carousel-indicators li[data-slide-to='3'].active {
  background-image: url("../pngs/nav/04_full.png");
}

.carousel-indicators li[data-slide-to='4'] {
  width: 18.5px;
  background-image: url("../pngs/nav/05_empty.png");
}

.carousel-indicators li[data-slide-to='4'].active {
  background-image: url("../pngs/nav/05_full.png");
}

.carousel-indicators li[data-slide-to='5'] {
  width: 16.5px;
  background-image: url("../pngs/nav/06_empty.png");
}

.carousel-indicators li[data-slide-to='5'].active {
  background-image: url("../pngs/nav/06_full.png");
}

.carousel-indicators li[data-slide-to='6'] {
  width: 15px;
  background-image: url("../pngs/nav/07_empty.png");
}

.carousel-indicators li[data-slide-to='6'].active {
  background-image: url("../pngs/nav/07_full.png");
}

.carousel-indicators li[data-slide-to='7'] {
  width: 14.5px;
  background-image: url("../pngs/nav/08_empty.png");
}

.carousel-indicators li[data-slide-to='7'].active {
  background-image: url("../pngs/nav/08_full.png");
}

.carousel-indicators li[data-slide-to='8'] {
  width: 14px;
  background-image: url("../pngs/nav/09_empty.png");
}

.carousel-indicators li[data-slide-to='8'].active {
  background-image: url("../pngs/nav/09_full.png");
}

.carousel-indicators li[data-slide-to='9'] {
  width: 15.5px;
  background-image: url("../pngs/nav/10_empty.png");
}

.carousel-indicators li[data-slide-to='9'].active {
  background-image: url("../pngs/nav/10_full.png");
}

.carousel-indicators li[data-slide-to='10'] {
  width: 13.5px;
  background-image: url("../pngs/nav/11_empty.png");
}

.carousel-indicators li[data-slide-to='10'].active {
  background-image: url("../pngs/nav/11_full.png");
}

.carousel-indicators li[data-slide-to='11'] {
  width: 14.5px;
  background-image: url("../pngs/nav/12_empty.png");
}

.carousel-indicators li[data-slide-to='11'].active {
  background-image: url("../pngs/nav/12_full.png");
}

.carousel-indicators li[data-slide-to='12'] {
  width: 15px;
  background-image: url("../pngs/nav/13_empty.png");
}

.carousel-indicators li[data-slide-to='12'].active {
  background-image: url("../pngs/nav/13_full.png");
}

.carousel-indicators li[data-slide-to='13'] {
  width: 20px;
  background-image: url("../pngs/nav/14_empty.png");
}

.carousel-indicators li[data-slide-to='13'].active {
  background-image: url("../pngs/nav/14_full.png");
}

.carousel-control {
    z-index: 100000;
    height: 50px;
    top: 50%;
    transform: translateY(-50%); 
}

.menu_btn img {
    display: inline-block;
    vertical-align: middle;
    width: 30px;
}

.menu_btn {
    position: absolute;
    margin-left: 50%;
    left: -35px;
    top: 25px;
    z-index: -1;
    cursor: pointer;
}

nav {
    float: right;
    height: 100%;
    margin-top: 12px;
}

nav a {
    vertical-align: middle;
    text-transform: uppercase;
    font-size: 15px;
    font-weight: 700;
    margin-left: 10px;
    color: #25253A;
}

nav a:hover {
    color: #25253A;
}

.container-fluid {
    max-width: 100%;
    width: 100%;
    padding: 70px 15px;
}

.page_content {
    width: 100vw; 
    height: 75vw;
    max-height: 100vh;
    max-width: 133.3333vh;
    margin: auto;
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
}

*:focus {
    outline: 0;
}

.video-wrapper {
    width: 100%;
    height: 100%;
    overflow: hidden;
    position: absolute;
    top: 0;
    left: 0;
    z-index: -1;
}

.carousel .item .fixed-layer {
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
}

.carousel .item.dynamic-background .fixed-layer img {
    /*width: 100%;*/
    display: none;
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
}
.carousel .item.dynamic-background .fixed-layer img.active {
  display: block;
}

.carousel .item.dynamic-background .scrolling-layer {
  z-index: 3;
}

.carousel .item img {
  /*position: relative;*/
  width: 100%;
}

.page_content {
    position: absolute;
}

.sixteen-nine:before {
    display: block;
    content: "";
    width: 100%;
    padding-top: 56.25%;
}

.sixteen-nine>.content {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
}

.carousel {
    position: relative;
    width: 100%;
    height: 100%;
}

.carousel-inner {
  height: 100%;
  width: 100%;
}

.carousel .item {
    text-align: center;
    /*overflow-y: auto;*/
    overflow: hidden;
    height: 100%;
    width: 100%;
    background-image: url('../pngs/nav/loading.gif');
    background-size: contain;
}

.carousel .item.loaded {
  background: transparent;
}

.carousel .item img {
  opacity: 0;
} 

.carousel .item.loaded img {
  opacity: 1;
} 

.carousel .item .scrolling-layer {
  overflow-y: auto;
  height: 100%;
  /*width: 100%;*/
  margin-right: -100px;
  padding-right: 100px;
  position: relative;
}

.scrolling-layer::-webkit-scrollbar {
  display: none;
}

.image-container {
  width: 100vw; 
  max-width: 133.3333vh;
}

.carousel .item.fullscreen {
  overflow: hidden;
}

.carousel .active.left {
    left: 0;
    opacity: 0;
    z-index: 2;
}

.carousel-control.left, .carousel-control.right {
    background: none;
}

.carousel-inner .title {
    position: absolute;
    top: 0;
    left: 0;
    z-index: 1000;
    width: 100%;
}

.video-wrapper video {
    top: 0;
}

/* Non-touch devices only: */
.no-touchevents .mobile-only {
  display: none !important;
}
.no-touchevents .carousel .item {
  transition: opacity 0.3s;
}
.no-touchevents .carousel .next {
    left: 0;
    opacity: 1;
    z-index: 1;
}
/* End non-touch devices only. */

/* Touch devices only: */
.touchevents .desktop-only {
  display: none;
}

.touchevents .carousel-inner > .next {
  left: -100%;
}
.touchevents .carousel-inner > .prev {
  left: 100%;
}
.touchevents .carousel-inner > .active.left {
  left: 100%;
}
.touchevents .carousel-inner > .active.right {
  left: -100%;
}

.touchevents .carousel .item {
  transition: none;
}
/* End touch devices only. */

.instructions.loaded .scrolling-layer {
  background-color: white;
}

.carousel-control {
  width: 90px;
  opacity: 1;
}

.carousel-control .icon-prev, .carousel-control .icon-next {
  width: 50px;
  height: 50px;
}

